[gd_scene load_steps=7 format=3 uid="uid://c3sbcml1kparx"]

[ext_resource type="Script" path="res://0_Scripts/Menu/main_menu.gd" id="1_odwai"]
[ext_resource type="Script" path="res://0_Scripts/Managers/normal_menu.gd" id="2_skkcp"]
[ext_resource type="Script" path="res://0_Scripts/Managers/credits_menu.gd" id="3_pytil"]
[ext_resource type="Texture2D" uid="uid://c1fcjrq3mx8jg" path="res://Sprites/UI/Panel_Menu.png" id="3_y1o3y"]
[ext_resource type="Texture2D" uid="uid://c8sof3uslcr2s" path="res://Sprites/UI/Panel_Logo.png" id="4_ld7y1"]
[ext_resource type="Theme" uid="uid://c28hewayxiery" path="res://Sprites/UI_Themes/pink_button_theme.tres" id="5_neafp"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 624.0
offset_bottom = 396.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_odwai")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="normal_menu" type="Node2D" parent="."]
script = ExtResource("2_skkcp")

[node name="CenterContainer" type="CenterContainer" parent="normal_menu"]
custom_minimum_size = Vector2(528, 216)
offset_left = -600.0
offset_top = -360.0
offset_right = 600.0
offset_bottom = -144.0

[node name="Sprite2D" type="Sprite2D" parent="normal_menu/CenterContainer"]
position = Vector2(600, 108)
scale = Vector2(4, 4)
texture = ExtResource("4_ld7y1")

[node name="VBoxContainer" type="VBoxContainer" parent="normal_menu"]
offset_left = -600.0
offset_top = -142.0
offset_right = 600.0
offset_bottom = 360.0
theme_override_constants/separation = 20
alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="normal_menu/VBoxContainer"]
position = Vector2(600, 184)
scale = Vector2(4, 4)
texture = ExtResource("3_y1o3y")

[node name="play_button" type="Button" parent="normal_menu/VBoxContainer"]
custom_minimum_size = Vector2(320, 68)
layout_mode = 2
theme = ExtResource("5_neafp")
text = "Empezar"

[node name="volumen_label" type="Label" parent="normal_menu/VBoxContainer"]
layout_mode = 2
text = "VOLUMEN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="volumen_slider" type="HSlider" parent="normal_menu/VBoxContainer/volumen_label"]
layout_mode = 2
offset_left = 150.0
offset_right = 273.0
offset_bottom = 16.0

[node name="credits_button" type="Button" parent="normal_menu/VBoxContainer"]
layout_mode = 2
text = "Creditos"

[node name="quit_button" type="Button" parent="normal_menu/VBoxContainer"]
layout_mode = 2
text = "Cerrar el Juego"

[node name="credits_menu" type="Node2D" parent="."]
visible = false
script = ExtResource("3_pytil")

[node name="back_to_menu_button" type="Button" parent="credits_menu"]
offset_left = 371.0
offset_top = 522.0
offset_right = 807.0
offset_bottom = 640.0
text = "Volver al Menu"

[node name="Programmer" type="Label" parent="credits_menu"]
offset_top = 175.0
offset_right = 556.0
offset_bottom = 276.0
theme_override_font_sizes/font_size = 30
text = "Programador: Chuckity Chuck"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Artist" type="Label" parent="credits_menu"]
offset_left = 600.0
offset_top = 175.0
offset_right = 1156.0
offset_bottom = 276.0
theme_override_font_sizes/font_size = 30
text = "Artista: Juan Jose Garrido Bascaran"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Thanks" type="Label" parent="credits_menu"]
offset_left = 293.0
offset_top = 344.0
offset_right = 849.0
offset_bottom = 445.0
theme_override_font_sizes/font_size = 30
text = "Agradecimientos Especiales:
- Aguacate
- Catanitta"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="normal_menu/VBoxContainer/play_button" to="." method="_on_play_button_pressed"]
[connection signal="value_changed" from="normal_menu/VBoxContainer/volumen_label/volumen_slider" to="." method="_on_volumen_slider_value_changed"]
[connection signal="pressed" from="normal_menu/VBoxContainer/credits_button" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="normal_menu/VBoxContainer/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="credits_menu/back_to_menu_button" to="." method="_on_back_to_menu_button_pressed"]
